--- a/stijl.css
+++ b/stijl.css
@@ -75,10 +75,14 @@ nav ul li a {
 }
 
 .modal-content {
-    margin: 10% auto;
-    padding: 90px;
-    width: 80%;
-    max-width: 1200px;
+    margin: auto;
+    display: block;
+    width: auto;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 5vh 5vw;
+    box-sizing: border-box; 
+    background-color: transparent; 
 }
 
 .close {
