--- a/stijl.css
+++ b/stijl.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #f9f9f9;
     margin-bottom: 50px;
 }
 
@@ -20,6 +20,8 @@ header h1 {
 nav ul {
     list-style: none;
     padding: 0;
+    text-align: center;
+    background-color: #555;
 }
 
 nav ul li {
@@ -45,21 +47,28 @@ nav ul li a {
     margin: 10px;
     padding: 20px;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
-    display: flex;            /* Flex container maken */
-    justify-content: center;  /* Horizontaal centreren */
-    align-items: center;      /* Verticaal centreren */
-    flex-direction: column;   /* Stack children vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: transform 0.3s;
+}
+
+.painting:hover {
+    transform: scale(1.05);
 }
 
 .painting img {
-    width: 100%;    /* Volledige breedte van de div, aanpassen indien nodig */
-    height: auto;   /* Behoud aspect ratio */
-    max-height: 250px; /* Maximale hoogte, aanpassen indien nodig */
+    width: 100%;
+    height: auto;
+    max-height: 250px;
 }
 
 .painting p {
-    text-align: center; /* Centreert de tekst binnen de div */
-    margin-top: 10px;   /* Ruimte tussen de afbeelding en de tekst */
+    text-align: center;
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 .modal {
@@ -81,8 +90,8 @@ nav ul li a {
     max-width: 100%;
     max-height: 100%;
     padding: 5vh 5vw;
-    box-sizing: border-box; 
-    background-color: transparent; 
+    box-sizing: border-box;
+    background-color: transparent;
 }
 
 .close {
@@ -108,7 +117,8 @@ footer {
     bottom: 0;
     width: 100%;
 }
-.text{
+
+.text {
     display: block;
     height: 12px;
     padding: 80px;
