--- a/stijl.css
+++ b/stijl.css
@@ -2,26 +2,31 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
+    background-color: #f1f1f1; /* Lichtgrijs */
     margin-bottom: 50px;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #fff; /* Wit */
+    color: #333;
     padding: 10px 20px;
     text-align: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 header h1 {
     margin: 0;
+    font-size: 24px;
+    letter-spacing: 2px;
 }
 
 nav ul {
     list-style: none;
     padding: 0;
     text-align: center;
-    background-color: #555;
+    background-color: #fff;
+    margin: 0;
+    padding: 10px 0;
 }
 
 nav ul li {
@@ -30,9 +35,17 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color: #333;
     text-decoration: none;
-    margin-left: 15px;
+    font-weight: bold;
+    padding: 5px 10px;
+    transition: color 0.3s ease, border-bottom 0.3s ease;
+}
+
+nav ul li a:hover,
+nav ul li a.active {
+    color: #e63946; /* Rood voor actieve en hover staat */
+    border-bottom: 2px solid #e63946;
 }
 
 .gallery {
@@ -111,11 +124,12 @@ nav ul li a {
 footer {
     text-align: center;
     padding: 10px 0;
-    background-color: #333;
-    color: #fff;
+    background-color: #fff; /* Wit */
+    color: #333;
     position: fixed;
     bottom: 0;
     width: 100%;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .text {
