--- a/stijl.css
+++ b/stijl.css
@@ -4,13 +4,15 @@ body {
     padding: 0;
     background-color: #f1f1f1; /* Lichtgrijs */
     margin-bottom: 50px;
+    color: #333;
 }
 
 header {
     background-color: #fff; /* Wit */
-    color: #333;
+    color: #fff;
     padding: 10px 20px;
     text-align: center;
+    color: #333;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -18,6 +20,7 @@ header h1 {
     margin: 0;
     font-size: 24px;
     letter-spacing: 2px;
+    color: #333;
 }
 
 nav ul {
@@ -125,7 +128,7 @@ footer {
     text-align: center;
     padding: 10px 0;
     background-color: #fff; /* Wit */
-    color: #333;
+    color: #fff;
     position: fixed;
     bottom: 0;
     width: 100%;
